# Praxistransferprojekt2026

./: .gitignore  CMakeLists.txt  architecture_class_diagram.puml  calculatePendulum.h  imgui.ini  main.cpp  requirements.md  shader.h
header/: CalcEuler.h  CalcLeapFrog.h  CalcRK4.h  CalculationHanlder.h  GLFWContext.h  GLFWContextFactory.h  GPUBuffer.h  UIController.h  UiState.h  algorithmSelect.h  calculatePendulum.h  config.h  fpsCounter.h  pendulumJoint.h  renderer.h  shader.h  simulation.h  ui.h
header/Calculation/: CalcEuler.h  CalcLeapFrog.h  CalcRK4.h  Calculator.h
src/: CalcEuler.cpp  CalcLeapFrog.cpp  CalcRK4.cpp  GLFWContextFactory.cpp  UIController.cpp  calculatePendulum.cpp  main.cpp  pendulumJoint.cpp  renderer.cpp  shader.cpp  ui.cpp
